# optimal-forks

./: CMakeLists.txt  README.md
datastructures/: CMakeLists.txt
datastructures/includes/: Label.h
datastructures/src/: Label.cpp
definitions/includes/: constants.h
forkAlgorithm/: CMakeLists.txt
forkAlgorithm/includes/: WeakArcFinder.h  forks.h
forkAlgorithm/src/: WeakArcFinder.cpp  forks.cpp
graph/: CMakeLists.txt
graph/includes/: graph.h
graph/src/: graph.cpp
instances/: toy.txt
shortestPaths/: CMakeLists.txt
shortestPaths/includes/: AllToAll.h  Dijkstra.h  OneToAll.h  OneToOne.h  PotentialDijkstra.h
shortestPaths/src/: AllToAll.cpp  Dijkstra.cpp  PotentialDijkstra.cpp
src/: main.cpp
